# raytracer

./: Cargo.toml  README.md
examples/: demo.rs  image.rs  video.rs
src/: camera.rs  geom.rs  lib.rs  main.rs  material.rs  raytracer.rs
src/world/: mod.rs  plane.rs  scene.rs  sphere.rs  triangle.rs
