[package]
name = "softrays"
version = "0.5.0"
authors = ["LimelioN <memorial.limelion@gmail.com>"]
edition = "2018"
description = "Software raytracer"
readme = "README.md"
license = "MIT"
keywords = ["graphics", "raytracing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "softrays"

[dependencies]
ultraviolet = "^0.4.5"
rand = "^0.7.3"
rayon = "1.3.0"

[dev-dependencies]
image = "^0.23.2"
pbr = "1.0.2"

[[example]]
name = "demo"
